crates/plotnik-tests/tests/02-parser/recovery_validation/quantified_exact_anchor.txt
Q = (call (a) .! ? (b))
------------------ DIAGNOSTICS -------------------
error: anchors cannot be quantified
 --> query.ptk:1:18
  |
1 | Q = (call (a) .! ? (b))
  |                  ^
  |
help: remove the quantifier
  |
1 - Q = (call (a) .! ? (b))
1 + Q = (call (a) .!  (b))
  |
help: anchors constrain position and produce no value
